--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <body>
     <div style="background-color:#edeaea;width: 100%;height: 80px;display: grid;grid-template-columns: 80px auto;">
-        <audio controls="controls" id="music" mindex="1" hidden="hidden" src="1.mp3"></audio>
+        <audio controls="controls" preload="auto" id="music" mindex="1" hidden="hidden" src="1.mp3"></audio>
         <div style="background-color: darkgoldenrod;height: 100%;width: 80px;"></div>
         <div style="display: grid; grid-template-rows: auto 3px;background-color:gray;width: 100%;height: 100%;">
             <div
