--- a/index.html
+++ b/index.html
@@ -7,21 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>音乐</title>
     <style>
-        html,body{
+        html,
+        body {
             padding: 0;
             margin: 0;
         }
     </style>
     <script src="jquery-1.9.1.min.js"></script>
     <script>
-       var audio;
+        var audio;
         $(window).ready(
-            function(){
+            function () {
                 audio = document.getElementById("music");
             }
         )
         function playm() {
-           
+
             if ($("#g_play").css("visibility") === "hidden") {
                 $("#g_play").css("visibility", "visible")
                 $("#g_pause").css("visibility", "hidden")
@@ -48,33 +49,38 @@
                     audio.currentTime = 0;
                 }
                 $("#timeline").css("width", (curtt / fullt) * 100 + "%");
-                var t1=parseInt(curtt / 60) >= 10 ? parseInt(curtt/ 60) + ":" + (parseInt(curtt % 60) >= 10 ? parseInt(curtt% 60) : "0" + parseInt(curtt% 60)) : "0" + parseInt(curtt / 60) + ":" + (parseInt(curtt% 60) >= 10 ? parseInt(curtt % 60) : "0" + parseInt(curtt % 60));
-                var t2=parseInt(audio.duration / 60) >= 10 ? parseInt(audio.duration / 60) + ":" + (parseInt(audio.duration % 60) >= 10 ? parseInt(audio.duration % 60) : "0" + parseInt(audio.duration % 60)) : "0" + parseInt(audio.duration / 60) + ":" + (parseInt(audio.duration % 60) >= 10 ? parseInt(audio.duration % 60) : "0" + parseInt(audio.duration % 60))
-               //console.log(parseInt(curtt / 60) >= 10 ? parseInt(curtt/ 60) + ":" + (parseInt(curtt % 60) >= 10 ? parseInt(curtt% 60) : "0" + parseInt(curtt% 60)) : "0" + parseInt(curtt / 60) + ":" + (parseInt(curtt% 60) >= 10 ? parseInt(curtt % 60) : "0" + parseInt(curtt % 60)))
-                $("#time_txt").html(t1+"/"+t2);
+                if (isNaN(audio.duration)) {
+                    $("#time_txt").html("--:--/--:--");
+                } else {
+                    var t1 = parseInt(curtt / 60) >= 10 ? parseInt(curtt / 60) + ":" + (parseInt(curtt % 60) >= 10 ? parseInt(curtt % 60) : "0" + parseInt(curtt % 60)) : "0" + parseInt(curtt / 60) + ":" + (parseInt(curtt % 60) >= 10 ? parseInt(curtt % 60) : "0" + parseInt(curtt % 60));
+                    var t2 = parseInt(audio.duration / 60) >= 10 ? parseInt(audio.duration / 60) + ":" + (parseInt(audio.duration % 60) >= 10 ? parseInt(audio.duration % 60) : "0" + parseInt(audio.duration % 60)) : "0" + parseInt(audio.duration / 60) + ":" + (parseInt(audio.duration % 60) >= 10 ? parseInt(audio.duration % 60) : "0" + parseInt(audio.duration % 60))
+                    //console.log(parseInt(curtt / 60) >= 10 ? parseInt(curtt/ 60) + ":" + (parseInt(curtt % 60) >= 10 ? parseInt(curtt% 60) : "0" + parseInt(curtt% 60)) : "0" + parseInt(curtt / 60) + ":" + (parseInt(curtt% 60) >= 10 ? parseInt(curtt % 60) : "0" + parseInt(curtt % 60)))
+                    $("#time_txt").html(t1 + "/" + t2);
+                }
                 f();
             }, 500)
         }
-        function c(){
+        function c() {
             var objLeft = $("#timebox").offset().left;
             var mouseX = event.clientX + document.body.scrollLeft;
             var objX = mouseX - objLeft;
             // console.log(objX);
             // console.log(objX * audio.duration / parseInt($("#timebox").width()));
-            audio.currentTime =objX * audio.duration / parseInt($("#timebox").width());
-            $("#timeline").css("width", (objX /parseInt($("#timebox").width()) ) * 100 + "%");
+            audio.currentTime = objX * audio.duration / parseInt($("#timebox").width());
+            $("#timeline").css("width", (objX / parseInt($("#timebox").width())) * 100 + "%");
         }
     </script>
 </head>
 
 <body>
     <div style="background-color:#edeaea;width: 100%;height: 80px;display: grid;grid-template-columns: 80px auto;">
-        <audio controls="controls" preload="auto" id="music" mindex="1" hidden="hidden" src="1.mp3"></audio>
+        <audio controls="controls" id="music" mindex="1" hidden="hidden" src="1.mp3" onload="f()"></audio>
         <div style="background-color: darkgoldenrod;height: 100%;width: 80px;"></div>
         <div style="display: grid; grid-template-rows: auto 3px;background-color:gray;width: 100%;height: 100%;">
             <div
                 style="background-color: coral; display: grid; grid-template-columns: 40px 40px 40px 40px auto;grid-gap: 6px 6px; align-items: center;text-align: center;padding: 6px;">
-                <div style="color:aqua" stroke="#fff" onclick="prevM()"><svg viewBox="0 0 40 40" stroke="#fff" fill="#fff">
+                <div style="color:aqua" stroke="#fff" onclick="prevM()"><svg viewBox="0 0 40 40" stroke="#fff"
+                        fill="#fff">
                         <circle cx="20" cy="20" r="15" stroke-width="3" fill="none"></circle>
                         <polygon points="10,20 18,10 18,20 26,10 26,30 18,20 18,30"></polygon>
                     </svg></div>
@@ -103,7 +109,7 @@
                 </div>
             </div>
             <div id="timebox" style="background-color:gray;width:100%;" onclick="c()">
-            <div id="timeline" style="background-color:cornflowerblue;width:0;height: 100%;"></div>
+                <div id="timeline" style="background-color:cornflowerblue;width:0;height: 100%;"></div>
             </div>
         </div>
     </div>
