--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 $("#g_play").css("visibility", "hidden")
                 $("#g_pause").css("visibility", "visible")
                 f();
-                // audio.play();
+                audio.play();
             }
 
         }
