--- a/index.html
+++ b/index.html
@@ -16,13 +16,43 @@
     <script src="jquery-1.9.1.min.js"></script>
     <script>
         var audio;
+        var data = {
+            "music": [
+                {
+                    "id": "1",
+                    "audio": "1.MP3",
+                    "name": "有鹤衔花"
+
+                },
+                {
+
+                    "id": "2",
+                    "audio": "2.MP3",
+                    "name": "take me to your heart"
+                },
+                {
+                    "id": "3",
+                    "audio": "3.MP3",
+                    "name": "冬意"
+                },
+                {
+
+                    "id": "4",
+                    "audio": "4.MP3",
+                    "name": "下雨的时候大家都在干嘛"
+                }
+
+            ]
+        }
         $(window).ready(
             function () {
                 audio = document.getElementById("music");
             }
         )
         function playm() {
-
+            var mindex=parseInt($("#music").attr("mindex")) - 1
+                audio.src = data.music[mindex].audio;
+                $("#music_name").html(data.music[mindex].name);
             if ($("#g_play").css("visibility") === "hidden") {
                 $("#g_play").css("visibility", "visible")
                 $("#g_pause").css("visibility", "hidden")
@@ -35,6 +65,33 @@
                 audio.play();
             }
 
+        }
+        function prevM() {
+            if (parseInt($("#music").attr("mindex")) >1) {
+               
+                $("#music").attr("mindex", parseInt($("#music").attr("mindex")) - 1)
+                var mindex=parseInt($("#music").attr("mindex")) - 1
+                audio.src = data.music[mindex].audio;
+                $("#music_name").html(data.music[mindex].name);
+                $("#g_play").css("visibility", "hidden")
+                $("#g_pause").css("visibility", "visible")
+                f();
+                audio.play();
+            }
+
+
+        }
+        function nextM() {
+            if (parseInt($("#music").attr("mindex")) < data.music.length) {
+                $("#music").attr("mindex", parseInt($("#music").attr("mindex")) + 1)
+                var mindex=parseInt($("#music").attr("mindex")) - 1
+                audio.src = data.music[mindex].audio;
+                $("#music_name").html(data.music[mindex].name);
+                $("#g_play").css("visibility", "hidden")
+                $("#g_pause").css("visibility", "visible")
+                f();
+                audio.play();
+            }
         }
         var t;
         var strl = "LOADING"
@@ -91,7 +148,7 @@
 
 <body>
     <div style="background-color:#edeaea;width: 100%;height: 80px;display: grid;grid-template-columns: 80px auto;">
-        <audio controls="controls" id="music" mindex="1" hidden="hidden" src="1.mp3" onload="f()"></audio>
+        <audio controls="controls" id="music" mindex="1" hidden="hidden"></audio>
         <div style="background-color: darkgoldenrod;height: 100%;width: 80px;"></div>
         <div style="display: grid; grid-template-rows: auto 3px;background-color:gray;width: 100%;height: 100%;">
             <div
@@ -120,8 +177,8 @@
                         <circle cx="20" cy="20" r="15" stroke-width="3" fill="none"></circle>
                         <polygon points="14,10, 14,30 22,20 22,30 30,20 22,10 22,20"></polygon>
                     </svg></div>
-                <div>
-                    <div>music name</div>
+                <div style="color: #fff;">
+                    <div id="music_name">music name</div>
                     <div id="time_txt"> 00:00/00:00</div>
                 </div>
             </div>
