--- a/index.html
+++ b/index.html
@@ -20,30 +20,31 @@
             "music": [
                 {
                     "id": "1",
-                    "audio": "1.MP3",
+                    "audio": "1.mp3",
                     "name": "有鹤衔花"
 
                 },
                 {
 
                     "id": "2",
-                    "audio": "2.MP3",
+                    "audio": "2.mp3",
                     "name": "take me to your heart"
                 },
                 {
                     "id": "3",
-                    "audio": "3.MP3",
+                    "audio": "3.mp3",
                     "name": "冬意"
                 },
                 {
 
                     "id": "4",
-                    "audio": "4.MP3",
+                    "audio": "4.mp3",
                     "name": "下雨的时候大家都在干嘛"
                 }
 
             ]
         }
+        
         $(window).ready(
             function () {
                 audio = document.getElementById("music");
