--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
 
             ]
         }
-        
         $(window).ready(
             function () {
                 audio = document.getElementById("music");
@@ -62,6 +61,7 @@
             } else {
                 $("#g_play").css("visibility", "hidden")
                 $("#g_pause").css("visibility", "visible")
+                clearTimeout(t);
                 f();
                 audio.play();
             }
@@ -76,6 +76,7 @@
                 $("#music_name").html(data.music[mindex].name);
                 $("#g_play").css("visibility", "hidden")
                 $("#g_pause").css("visibility", "visible")
+                clearTimeout(t);
                 f();
                 audio.play();
             }
@@ -90,6 +91,7 @@
                 $("#music_name").html(data.music[mindex].name);
                 $("#g_play").css("visibility", "hidden")
                 $("#g_pause").css("visibility", "visible")
+                clearTimeout(t);
                 f();
                 audio.play();
             }
