--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             } else {
                 $("#g_play").css("visibility", "hidden")
                 $("#g_pause").css("visibility", "visible")
-                clearTimeout(t);
+                //clearTimeout(t);
                 f();
                 audio.play();
             }
