--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@ if (isNaN(audio.duration)) {
 <body>
     <div style="background-color:#edeaea;width: 100%;height: 80px;display: grid;grid-template-columns: 80px auto;">
         <audio controls="controls" id="music" mindex="1" hidden="hidden"></audio>
-        <div style="background-color: darkgoldenrod;height: 100%;width: 80px;"><svg viewBox="0 0 80 80" fill="#fff">
-            <circle cx="20" cy="50" r="6" ></circle>
-            <path d="m20 50 q10 10 8 -30h20q5 20 -3 28" fill="none" stroke="#fff" stroke-width="4"></path>
-            <circle cx="42" cy="45" r="6" ></circle>
+        <div style="background-color:steelblue;height: 100%;width: 80px;"><svg viewBox="0 0 80 80" fill="#fff">
+            <circle cx="23" cy="55" r="6" ></circle>
+            <path d="m23 55 q10 10 8 -30h20q5 20 -3 28" fill="none" stroke="#fff" stroke-width="4"></path>
+            <circle cx="45" cy="50" r="6" ></circle>
         </svg></div>
         <div style="display: grid; grid-template-rows: auto 3px;background-color:gray;width: 100%;height: 100%;">
             <div
