--- a/home.html
+++ b/home.html
@@ -11,23 +11,23 @@
             "top": [
              {
                  "id": "1",
-                 "img": "1.jpg",
+                 "img": "https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/1.jpg",
                  "discription": "绿水青山，就是金山银山"
 
              },
              {
                  "id": "2",
-                 "img": "2.jpg",
+                 "img": "https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/2.jpg",
                  "discription": "生态美助推生活美"
              },
              {
                  "id": "3",
-                 "img": "3.jpg",
+                 "img": "https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/3.jpg",
                  "discription": "绿色家园有我"
              },
              {
                  "id": "4",
-                 "img": "4.jpg",
+                 "img": "https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/4.jpg",
                  "discription": "绿化工程找潘农绿化"
              }
 
