--- a/home.html
+++ b/home.html
@@ -354,7 +354,7 @@
                 </div>
                 <div style="position:absolute;width:100%;height:100%;top:60px;">
                     <ul style="position:absolute;width:100%;height:100%;left:0; padding:0;margin:0;overflow:hidden;">
-                        <li class="lbox" select="1" id="l1" style="position:absolute;background-image:url('y1.jpg');background-size:100% 100%;height:100%;width:100%;display:block;top:0;opacity:1">
+                        <li class="lbox" select="1" id="l1" style="position:absolute;background-image:url('https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/y1.jpg');background-size:100% 100%;height:100%;width:100%;display:block;top:0;opacity:1">
                             <div class="content">
                                 <div class="box"></div>
                                 <div>
@@ -375,8 +375,8 @@
                                 <div class="box"></div>
                             </div>
                         </li>
-                        <li class="lbox" select="0" id="l2" style="position:absolute;height:100%;width:100%;background-image:url('y2.jpg');background-size:100% 100%;display:block;top:100%;opacity:0"></li>
-                        <li class="lbox" select="0" id="l3" style="position:absolute;height:100%;width:100%;background-image:url('y3.jpg');background-size:100% 100%;display:block;top:100%;opacity:0"></li>
+                        <li class="lbox" select="0" id="l2" style="position:absolute;height:100%;width:100%;background-image:url('https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/y2.jpg');background-size:100% 100%;display:block;top:100%;opacity:0"></li>
+                        <li class="lbox" select="0" id="l3" style="position:absolute;height:100%;width:100%;background-image:url('https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/y3.jpg');background-size:100% 100%;display:block;top:100%;opacity:0"></li>
                     </ul>
                 </div>
 
@@ -386,14 +386,14 @@
             <div class="item1 item">
                 <a style="box-sizing:border-box;text-align:center;">
                     <div style="padding:.4rem;">
-                        <img src="work/w1.jpg" style="width:100%;" />
+                        <img src="https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/work/w1.jpg" style="width:100%;" />
                     </div>
                 </a>
             </div>
             <div class="item2 item">
                 <a style=" box-sizing:border-box;text-align:center;">
                     <div style="padding:.4rem;">
-                        <img src="work/w2.jpg" style="width:100%;" />
+                        <img src="https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/work/w2.jpg" style="width:100%;" />
                     </div>
                 </a>
             </div>
@@ -412,14 +412,14 @@
             <div class="item4 item">
                 <a style=" box-sizing:border-box;text-align:center;">
                     <div style="padding:.4rem;">
-                        <img src="work/w3.jpg" style="width:100%;" />
+                        <img src="https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/work/w3.jpg" style="width:100%;" />
                     </div>
                 </a>
             </div>
             <div class="item5 item">
                 <a style=" box-sizing:border-box;text-align:center;">
                     <div style="padding:.4rem;">
-                        <img src="work/w4.jpg" style="width:100%;" />
+                        <img src="https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/work/w4.jpg" style="width:100%;" />
                     </div>
                 </a>
             </div>
