--- a/home.html
+++ b/home.html
@@ -335,7 +335,7 @@
     </style>
 </head>
 <body>
-    <div id="loading" style=" position:fixed;top:0; height:100%;width:100%;background:#fff;z-index:999;display:flex;align-content:center"><img style="height:240px;width:240px;margin:auto auto; z-index:999" src="loading.gif" /></div>
+    <div id="loading" style=" position:fixed;top:0; height:100%;width:100%;background:#fff;z-index:999;display:flex;align-content:center"><img style="height:240px;width:240px;margin:auto auto; z-index:999" src="https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/loading.gif" /></div>
     <div id="maim">
         <div id="top" style="position:relative;">
 
