--- a/exemple.html
+++ b/exemple.html
@@ -50,7 +50,7 @@
           ></span
         >
       </p>
-      <p><img src="work/w4.jpg"  style="width:100%;"/></p>
+      <p><img src="https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/work/w4.jpg"  style="width:100%;"/></p>
       <p />
       <p>
         <span><span><span><h4>3、绿化质量目标</h4></span
