--- a/product.html
+++ b/product.html
@@ -10,43 +10,43 @@
             "product": [
              {
                  "id": "1",
-                 "img": "https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/p1.jpg",
+                 "img": "https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/products/p1.jpg",
                  "name": "罗汉杉"
 
              },
              {
                  "id": "2",
-                 "img": "https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/p2.jpg",
+                 "img": "https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/products/p2.jpg",
                  "name": "仙柏"
 
              }, {
                  "id": "3",
-                 "img": "https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/p3.jpg",
+                 "img": "https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/products/p3.jpg",
                  "name": "箭竹"
 
              }, {
                  "id": "4",
-                 "img": "https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/p4.jpg",
+                 "img": "https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/products/p4.jpg",
                  "name": "枫树"
 
              }, {
                  "id": "5",
-                 "img": "https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/p5.jpg",
+                 "img": "https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/products/p5.jpg",
                  "name": "栾树"
 
              }, {
                  "id": "6",
-                 "img": "https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/p6.jpg",
+                 "img": "https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/products/p6.jpg",
                  "name": "梨子树"
 
              }, {
                  "id": "7",
-                 "img": "https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/p7.jpg",
+                 "img": "https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/products/p7.jpg",
                  "name": "紫叶李"
 
              }, {
                  "id": "8",
-                 "img": "https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/p8.jpg",
+                 "img": "https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/products/p8.jpg",
                  "name": "银杏"
 
              },
