--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
     </style>
 </head>
 <body>
-    <div id="loading" style=" position:fixed;top:0; height:100%;width:100%;background:#fff;z-index:999;display:flex;align-content:center"><img style="height:240px;width:240px;margin:auto auto; z-index:999" src="loading.gif" /></div>
+    <div id="loading" style=" position:fixed;top:0; height:100%;width:100%;background:#fff;z-index:999;display:flex;align-content:center"><img style="height:240px;width:240px;margin:auto auto; z-index:999" src="https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/loading.gif" /></div>
     <div style="margin:30px;">
         <div style="width:100%;text-align:center;margin:auto;color:#0094ff;"><h2>关于潘农绿化</h2><hr style="border:1px solid #0094ff;" /></div>
         <h4>
@@ -76,7 +76,7 @@
         <div class="alertdiv" style=" position:absolute;width: 100%;height:100%;top:0;left:0; z-index: 99;">
             <div class="alert" style=" position: fixed;width: 320px;height: 200px;margin: auto auto;left: 0;right: 0;bottom:30px; background:rgba(128, 128, 128, 0.60);color:#fff;word-wrap:break-word;border: 1px solid rgba(128, 128, 128, 0.60);border-radius:2px;box-shadow: 0 0 10px #808080;z-index: 10000;">
                 <div style="position:absolute;height:30px;top:0;margin: auto auto;left: 0;right: 0;background:#0094ff;z-index:10001;"><div style="position:absolute;height:30px;left:0;right:0; margin: auto auto;left: 0;line-height:30px;font-size:16px;text-align:center;z-index:10001;">营业执照</div></div>
-                <img class="img1 preview"  src="zz.png" style=" position:absolute;width: 300px;height: 160px;margin: auto auto;left: 0;right: 0;top:30px; background:url(zz.png);background-size:100% 100%; z-index: 10000;"></img>
+                <img class="img1 preview"  src="zz.png" style=" position:absolute;width: 300px;height: 160px;margin: auto auto;left: 0;right: 0;top:30px; background:url(https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/zz.png);background-size:100% 100%; z-index: 10000;"></img>
             </div>
         </div>
     </div>
