--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
         <div class="alertdiv" style=" position:absolute;width: 100%;height:100%;top:0;left:0; z-index: 99;">
             <div class="alert" style=" position: fixed;width: 320px;height: 200px;margin: auto auto;left: 0;right: 0;bottom:30px; background:rgba(128, 128, 128, 0.60);color:#fff;word-wrap:break-word;border: 1px solid rgba(128, 128, 128, 0.60);border-radius:2px;box-shadow: 0 0 10px #808080;z-index: 10000;">
                 <div style="position:absolute;height:30px;top:0;margin: auto auto;left: 0;right: 0;background:#0094ff;z-index:10001;"><div style="position:absolute;height:30px;left:0;right:0; margin: auto auto;left: 0;line-height:30px;font-size:16px;text-align:center;z-index:10001;">营业执照</div></div>
-                <img class="img1 preview"  src="zz.png" style=" position:absolute;width: 300px;height: 160px;margin: auto auto;left: 0;right: 0;top:30px; background:url(https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/zz.png);background-size:100% 100%; z-index: 10000;"></img>
+                <img class="img1 preview"  src="https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/zz.png" style=" position:absolute;width: 300px;height: 160px;margin: auto auto;left: 0;right: 0;top:30px; background:url(https://pnlh.oss-cn-shanghai.aliyuncs.com/pnlh/zz.png);background-size:100% 100%; z-index: 10000;"></img>
             </div>
         </div>
     </div>
