--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>天涯觅知音,只为一曲肝肠断</title>
+    <title>天涯觅知音，只为一曲肝肠断</title>
     <style>
         body {
             height: 100%;
@@ -26,19 +26,26 @@
                 //alert("111")
                 var musicselecter = document.createElement("input");
                 musicselecter.type = "file";
+                musicselecter.multiple = "multiple";
+                musicselecter.accept="audio/*"
                 musicselecter.addEventListener("change", () => {
-                    var file = musicselecter.files[0];
-                     if (!/audio\/\w+/.test(file.type)) {
-                        alert("文件格式不正确", null, () => { $("#uploadtx").val(""); });
-                        return false;
-                    }
-                    var url = URL.createObjectURL(file)
-                    data.music.push({
-                        "id": "n",
-                        "audio": url,
-                        "name": file.name
-                    });
+                    var files = musicselecter.files;
+                    let _files=Array.from(files);
+                    _files.map((file) => {
+                        if (!/audio\/\w+/.test(file.type)) {
+                            alert("文件格式不正确", null, () => { $("#uploadtx").val(""); });
+                            return false;
+                        }
+                        var url = URL.createObjectURL(file)
+                        data.music.push({
+                            "id": "n",
+                            "audio": url,
+                            "name": file.name
+                        });
+
+                    })
                     updateList();
+
                 })
                 $(musicselecter).click();
             });
