--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>天涯觅知音</title>
+    <title>天涯觅知音,只为一曲肝肠断</title>
     <style>
         body {
             height: 100%;
@@ -37,9 +37,8 @@
                 musicselecter.type = "file";
                 if (!(bIsIpad || bIsIphoneOs || bIsMidp || bIsUc7 || bIsUc || bIsAndroid || bIsCE || bIsWM)) {
                     musicselecter.multiple = "multiple";
+                    musicselecter.accept = "audio/*"
                 }
-
-                musicselecter.accept = "audio/*"
                 musicselecter.addEventListener("change", () => {
                     var files = musicselecter.files;
                     let _files = Array.from(files);
